<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.joelimyx.subbox.detail.DetailScrollingActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:elevation="2dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:layout_marginRight="3dp">
                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"/>
                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_toRightOf="@+id/detail_image"/>
                <TextView
                    android:id="@+id/detail_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_toRightOf="@id/detail_image"
                    android:layout_below="@id/title_text"/>
            </RelativeLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">
                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="5dp">

                    <Button
                        android:id="@+id/detail_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add to cart"
                        android:background="#eee"
                        android:padding="6dp"/>
                </android.support.v7.widget.CardView>
            </FrameLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <include layout="@layout/content_detail_scrolling"/>

</LinearLayout>