<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardCornerRadius="3dp">
    <RelativeLayout
        android:id="@+id/checkout_item"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ImageView
            android:id="@+id/checkout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"/>
        <TextView
            android:id="@+id/checkout_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/checkout_image"/>
        <TextView
            android:id="@+id/checkout_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/checkout_image"
            android:layout_below="@id/checkout_title_text"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="6dp">
        <ImageView
            android:id="@+id/green_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/checkout_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/green_plus"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/red_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/checkout_count_text"
            android:src="@drawable/ic_minus"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>