<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.joelimyx.subbox.detail.DetailScrollingActivity">

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="Go to cart"
        app:showAsAction="always"/>
</menu>
