<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="#e5e5f6fa"
    tools:context="com.joelimyx.subbox.checkout.CheckOutActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/checkout_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="#003ec2"
        android:padding="16dp"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#eee"/>
        <TextView
            android:id="@+id/tax_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtotal_text"
            android:textSize="16sp"
            android:textColor="#eee"/>
        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tax_text"
            android:textSize="16sp"
            android:textColor="#eee"/>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:cardCornerRadius="5dp"
            app:elevation="@dimen/cardview_default_elevation">
            <Button
                android:id="@+id/checkout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="checkout"
                android:background="#eee"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</FrameLayout>
